# SuperGenius

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  processing_app.cpp
example/crdt_globaldb/: CMakeLists.txt  globaldb_app.cpp
example/echo_client/: CMakeLists.txt
example/graphsync_app/: CMakeLists.txt  graphsync_acceptance_common.cpp  graphsync_acceptance_common.hpp  graphsync_app.cpp
example/ipfs_client/: CMakeLists.txt  ipfs.cpp
example/processing_dapp/: CMakeLists.txt  processing_dapp.cpp  processing_dapp_processor.cpp  processing_task_queue_impl.hpp
example/processing_room/: processing_app.cpp
node/: CMakeLists.txt  entry.cpp
src/api/: CMakeLists.txt
src/api/processing/: CMakeLists.txt  processing_server.cpp
src/application/: app_config.hpp
src/application/impl/: app_config_impl.cpp  app_config_impl.hpp
src/crdt/: CMakeLists.txt  crdt_datastore.hpp  crdt_options.hpp  graphsync_dagsyncer.hpp
src/crdt/globaldb/: CMakeLists.txt  globaldb.cpp  globaldb.hpp  pubsub_broadcaster.cpp  pubsub_broadcaster.hpp  pubsub_broadcaster_ext.cpp  pubsub_broadcaster_ext.hpp
src/crdt/impl/: crdt_datastore.cpp  graphsync_dagsyncer.cpp
src/network/impl/: loopback_stream.hpp
src/processing/: CMakeLists.txt  processing_core.hpp  processing_engine.cpp  processing_engine.hpp  processing_node.cpp  processing_node.hpp  processing_room.cpp  processing_room.hpp  processing_service.cpp  processing_service.hpp  processing_shared_queue.cpp  processing_shared_queue.hpp  processing_shared_queue_data_view.hpp  processing_subtask_enqueuer_impl.cpp  processing_subtask_enqueuer_impl.hpp  processing_subtask_queue.cpp  processing_subtask_queue.hpp  processing_subtask_queue_accessor.hpp  processing_subtask_queue_accessor_impl.cpp  processing_subtask_queue_accessor_impl.hpp  processing_subtask_queue_channel.hpp  processing_subtask_queue_channel_pubsub.cpp  processing_subtask_queue_channel_pubsub.hpp  processing_subtask_queue_manager.cpp  processing_subtask_queue_manager.hpp  processing_subtask_result_storage.hpp  processing_subtask_state_storage.hpp  processing_subtask_storage.hpp  processing_subtask_storage_impl.cpp  processing_subtask_storage_impl.hpp  processing_task_queue.hpp  processing_validation_core.cpp  processing_validation_core.hpp
src/processing/proto/: SGProcessing.proto
src/verification/: production.hpp
src/verification/production/impl/: production_impl.cpp
test/src/crdt/: CMakeLists.txt  crdt_datastore_test.cpp
test/src/processing/: CMakeLists.txt  processing_engine_test.cpp  processing_room_test.cpp  processing_service_test.cpp  processing_subtask_queue_accessor_impl_test.cpp  processing_subtask_queue_channel_pubsub_test.cpp  processing_subtask_queue_manager_test.cpp  processing_subtask_queue_test.cpp  processing_subtask_storage_impl_test.cpp
